--- a/platforms/common/scss/admin/_menu.scss
+++ b/platforms/common/scss/admin/_menu.scss
@@ -125,7 +125,6 @@ $submenu-ratio:                 60px;
         }
 	}
 	span {
-		line-height: $core-line-height + 0.5;
 		font-size: $core-font-size - 0.4;
 		margin-left: 0.2rem;
 		display: inline-block;
